<resources>
    <string name="app_name">TaigaOpenSource</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login / Register-->
    <string name="email">E-mail address</string>
    <string name="domain">Domain</string>
    <string name="username">Username</string>
    <string name="fullname">Full name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
</resources>
