<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_domain_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/domain"
        android:layout_margin="10dp"/>


    <EditText
        android:id="@+id/login_username_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:layout_margin="10dp"/>


    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/login_submit"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>